--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"  
+    "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
